# lbvh-cpu

./: .gitignore  CMakeLists.txt  README.md  lbvh.cpp  makefile
include/lbvh/: comp_zorder.hpp  comp_zorder_seq.hpp  cons_bvh_seq.hpp  cons_radix.hpp  cons_radix_seq.hpp  sort_zorder.hpp  sort_zorder_seq.hpp
include/util/: normalize.hpp
models/: README.txt
src/: benchmark.py  lbvh.cpp
src/lbvh/: comp_zorder.cpp  comp_zorder_seq.cpp  cons_bvh_seq.cpp  cons_radix.cpp  cons_radix_seq.cpp  sort_zorder.cpp  sort_zorder_seq.cpp
src/util/: normalize.cpp
writeup/: proposal.md  writeup.md
~Downloads/comp_zorder/: cent_x.txt  cent_y.txt  cent_z.txt  morton.txt  qbinary.txt  quantized.txt
